--- a/index.html
+++ b/index.html
@@ -21,17 +21,23 @@
 
     <main>
         <div class="linha-cenas">
+            <a href="./pages/winterfell.html">
             <div class="box cena-winterfell">
                 <p>Onde tudo começa... Winterfell</p>
             </div>
+            </a>
+            <a href="./pages/dothraki.html">
             <div class="box cena-dothraki">
                 <p>O nascimento do dragão</p>
             </div>
+            </a>
         </div>
         <div class="linha-cenas">
+            <a href="./pages/dracarys.html">
             <div class="box cena-dracarys">
                 <p>... Dracarys</p>
             </div>
+            </a>
             <div class="box cena-beyond">
                 <p>Beyond the Wall</p>
             </div>
