--- a/pages/dothraki.html
+++ b/pages/dothraki.html
@@ -16,7 +16,7 @@
 </section>
 
 <article>
-    <h2>Onde tudo começou...</h2>
+    <h2>E nasce o dragão</h2>
     <div class="block1">
         <div class="serie-row1">
             <h3>Na série: Acampamento Dothraki</h3>
