--- a/pages/dracarys.html
+++ b/pages/dracarys.html
@@ -4,45 +4,45 @@
     <meta charset="UTF-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <title>Explore Winterfell - Game of Thrones</title>
+    <title>Explore Astapor - Game of Thrones</title>
     <link rel="stylesheet" href="../css/dracarys-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 </head>
 <body>
 
 <section class="top">
-    <h1>Winterfell</h1>
+    <h1>Astapor</h1>
     <div class="gradient"></div>
 </section>
 
 <article>
-    <h2>Onde tudo começou...</h2>
+    <h2>…Dracarys</h2>
     <div class="block1">
         <div class="serie-row1">
-            <h3>Na série: Winterfell</h3>
-            <p>O episódio piloto já prende a atenção de quem vê imediatamente. Desde a icônica cena que finaliza o episódio, onde Bran perde o movimento das pernas caindo do parapeito da janela onde presencia uma cena que não deveria, Game of Thrones já se prova uma série acima dos padrões. O castelo e o famoso parapeito onde ocorreu o “acidente” ganharam um novo fluxo de turistas após o sucesso da série.</p>
+            <h3>Na série: Portões de Astapor</h3>
+            <p>Uma das cenas mais emocionantes de Game of Thrones para a fanbase de Daenerys Targaryen. Na sua trajetória em busca do trono de ferro de Westeros, a não-queimada e mãe de dragões a finge trocar um de seus dragões pelo exército Imaculado e, ao entregá-lo, ela comanda que ele queime vivo seu “novo dono”. O exército Imaculado, passa a ser liderado por Daenerys por escolha própria, enfim libertos da escravidão.</p>
         </div>
         <div class="spacer"></div>
         <div class="serie-row2">
-            <img src="../images/img-pages/winterfell/Serie-Winterfell.png" alt="Winterfell" title="Winterfell">
+            <img src="../images/img-pages/dracarys/Serie-dracarys.png" alt="Portões de Astapor" title="Portões de Astapor">
         </div>
     </div>
     <div class="block2">
         <div class="vida-real-row1">
-            <h3>Na vida real: Castelo Ward</h3>
-            <p>O castelo que serviu de locação para Winterfell durante a primeira temporada de Game of Thrones, na vida real, serviu como mansão que abrigou a família Ward ao longo dos séculos. Hoje é um museu e está aberto para visitação.</p>
+            <h3>Na vida real: Ouarzazate - Atlas Studios</h3>
+            <p>O Atlas Studios é um conglomerado de estúdios baseados no Marrocos, muito utilizado em Hollywood para retratar ambientes desérticos e árabes. O Ouarzazate é um set que foi construído para o filme Lawrence of Arabia e também foi usado em vários blockbusters como Gladiador, Kingdom of Heaven, Prison Break e Vikings. O estúdio é público para visitação e um guia se disponibiliza para te acompanhar e contar as histórias.</p>
             <ul>
-                <li><span class="bold">País:</span> Irlanda do Norte</li>
-                <li><span class="bold">Endereço:</span> Strangford, Downpatrick BT30 7BA, Reino Unido</li>
-                <li><span class="bold">Horário de funcionamento:</span> Todos os dias, de 10h às 18h.</li>
-                <li><span class="bold">Preço:</span> £10 - £25</li>
+                <li><span class="bold">País:</span> Marrocos</li>
+                <li><span class="bold">Endereço:</span> Km 5, BP 28 Route de Marrakech, 45000, Marrocos</li>
+                <li><span class="bold">Horário de funcionamento:</span> Todos os dias, de 8h30 ao pôr-do-sol</li>
+                <li><span class="bold">Preço:</span> 80 dhs por pessoa</li>
                 <li><span class="bold">Visite o site</span></li>
                 <li><span class="bold">Explore no Google Maps</span></li>
             </ul>
         </div>
         <div class="spacer"></div>
         <div class="vida-real-row2">
-            <img src="../images/img-pages/winterfell/Vida-Real-Castle-Ward.png" alt="Castle Ward" title="Castle Ward">
+            <img src="../images/img-pages/dracarys/Vida-Real-Dracays.png" alt="Ouarzazate Studios" title="Ouarzazate Studios">
         </div>
     </div>
     <div class="explore">
@@ -52,5 +52,5 @@
         </div>
     </div>
 </article>
-<img class="img-bottom" src="../images/img-pages/winterfell/winterfel-art.png">
+<!-- <img class="img-bottom" src="../images/img-pages/winterfell/winterfel-art.png"> -->
 </body>
